--- a/index.html
+++ b/index.html
@@ -162,48 +162,12 @@
        <div class="container-fluid testimonial py-5">
     <div class="container py-5">
         <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-            <h1 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Features</h1>
+            <h1 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About Brisk</h1>
         </div>
-        <h2 class="display-5 w-50 mx-auto">Why Choose Us</h2>
+        <h2 class="display-5 w-50 mx-auto">Pest Control Services Since 2017</h2>
         <p>Brisk Pest Management - A leading pest control service in India. We are committed to sustainable pest control, providing services nationwide. Our offerings include Housekeeping, Catering, Utilities, Garden and Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Manpower Supply.</p>
     </div>
 </div>
-        <div class="d-flex my-2">
-    <div class="col-3">
-        <div class="text-center">
-            <div class="p-4 bg-dark rounded d-flex align-items-center justify-content-center">
-                <i class="fas fa-school fa-4x text-primary"></i>
-            </div>
-            <div class="my-2">
-                <h5 class="text-center">Education</h5>
-                <h5 class="text-center">center</h5>
-            </div>
-        </div>
-    </div>
-    <div class="col-3">
-        <div class="text-center">
-            <div class="p-4 bg-dark rounded d-flex align-items-center justify-content-center">
-                <i class="fas fa-warehouse fa-4x text-primary"></i>
-            </div>
-            <div class="my-2">
-                <h5 class="text-center">Warehouse</h5>
-                <h5 class="text-center">Cleaning</h5>
-            </div>
-        </div>
-    </div>
-    <div class="col-3">
-        <div class="text-center">
-            <div class="p-4 bg-dark rounded d-flex align-items-center justify-content-center">
-                <i class="fas fa-hospital fa-4x text-primary"></i>
-            </div>
-            <div class="my-2">
-                <h5 class="text-center">Hospital</h5>
-                <h5 class="text-center">Cleaning</h5>
-            </div>
-        </div>
-    </div>
-</div>
-
 
         <!-- Project Start -->
        <div class="container-fluid py-5">
