--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         </div>
         <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
             <div class="position-relative">
-                <img src="img/testimonial-2.jpg" class="img-fluid rounded-circle py-2" alt="">
+                <img src="img/pngwing.com.png" class="img-fluid rounded-circle py-2" alt="">
                 <div class="position-absolute" style="top: 33px; left: -25px;"></div>
             </div>
             <div class="ms-3">
