--- a/index.html
+++ b/index.html
@@ -423,20 +423,6 @@
 
     <div class="testimonial-item">
         <div class="testimonial-content rounded mb-4 p-4">
-            <p class="fs-5 m-0">Brisk Pest Management: Your top-tier, eco-friendly pest control solution. Our experts guarantee a pest-free environment, with 24/7 Emergency Services for your peace of mind. Experience excellence with us, where expertise meets dedication.</p>
-        </div>
-        <div class="d-flex align-items-center mb-4" style="padding: 0 0 0 25px;">
-    <div class="position-relative">
-        <img src="img/pngwing.com.png" class="img-fluid rounded-circle py-2" alt="" style="width: 50px; height: 50px;">
-        <div class="position-absolute" style="top: 33px; left: -25px;"></div>
-    </div>
-    <div class="ms-3">
-        <h4 class="mb-0">24/7 Emergency Service</h4>
-    </div>
-</div>
-        
-    <div class="testimonial-item">
-        <div class="testimonial-content rounded mb-4 p-4">
             <p class="fs-5 m-0">Brisk Pest Management: Your top-tier, eco-friendly pest control solution. Our experts guarantee a pest-free environment, with Straight Forward Pricing for peace of mind. Experience excellence where expertise meets dedication.</p>
         </div>
         <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
@@ -446,6 +432,22 @@
             </div>
             <div class="ms-3">
                 <h4 class="mb-0">Straight Forward Pricing</h4>
+            </div>
+        </div>
+    </div>
+</div>
+        
+    <div class="testimonial-item">
+        <div class="testimonial-content rounded mb-4 p-4">
+            <p class="fs-5 m-0">Brisk Pest Management: Your top-tier, eco-friendly pest control solution. Our experts guarantee a pest-free environment, with 24/7 Emergency Services for your peace of mind. Experience excellence with us, where expertise meets dedication.</p>
+        </div>
+        <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
+            <div class="position-relative">
+                <img src="img/pngwing.com.png" class="img-fluid rounded-circle py-2" alt="">
+                <div class="position-absolute" style="top: 33px; left: -25px;"></div>
+            </div>
+            <div class="ms-3">
+                <h4 class="mb-0">24/7 Emergency Service</h4>
             </div>
         </div>
     </div>
