--- a/project.html
+++ b/project.html
@@ -57,9 +57,9 @@
             <div class="container">
                 <div class="d-flex justify-content-between topbar py-2">
                     <div class="d-flex align-items-center flex-shrink-0 topbar-info">
-                        <a href="#" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>India</a>
-                        <a href="#" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>+919900102056</a>
-                        <a href="#" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>sunaif@gmail.com</a>
+                        <a href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>VIEW MAP</a>
+                        <a href="tel:+919900102056" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>CALL US</a>
+                        <a href="mailto:info.briskpestmanagement@gmail.com" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>MAIL US</a>
                     </div>
                     <div class="text-end pe-4 me-4 border-end border-dark search-btn">
                         <div class="search-form">
@@ -74,10 +74,9 @@
                         </div>
                     </div>
                     <div class="d-flex align-items-center justify-content-center topbar-icon">
-                        <a href="#" class="me-4"><i class="fab fa-facebook-f text-dark"></i></a>
-                        <a href="#" class="me-4"><i class="fab fa-twitter text-dark"></i></a>
-                        <a href="#" class="me-4"><i class="fab fa-instagram text-dark"></i></a>
-                        <a href="#" class=""><i class="fab fa-linkedin-in text-dark"></i></a>
+                        <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-4"><i class="fab fa-facebook-f text-dark"></i></a>
+                        <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-4"><i class="fab fa-instagram text-dark"></i></a>
+                        <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-dark"></i></a>
                     </div>
                 </div>
             </div>
@@ -90,7 +89,7 @@
             <div class="container">
                 <nav class="navbar navbar-dark navbar-expand-lg py-lg-0">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="text-primary mb-0 display-5">BRISK<span class="text-white">GROUP OF COMPANIES</span><i class=""></i></h1>
+                        <h1 class="text-primary mb-0 display-5" style="font-size: 1rem; @media (max-width: 584px) { font-size: 1.5rem; }">BRISK<span class="text-white">GROUP OF COMPANIES</span><i class=""></i></h1>
                     </a>
                     <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-dark"></span>
@@ -101,11 +100,6 @@
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="project.html" class="nav-item nav-link">Licence</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                                <div class="dropdown-menu m-0 bg-primary">
-                                </div>
-                            </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
@@ -113,7 +107,6 @@
             </div>
         </div>
         <!-- Navbar End -->
-
 
 
         <!-- Project Start -->
@@ -149,25 +142,26 @@
 
 
 
-        <!-- Footer Start -->
+       <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
             <div class="container py-5">
                 <div class="row g-4 footer-inner">
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
-                            <h4 class="text-white fw-bold mb-4">About PestKit.</h4>
-                            <p>Nostrud exertation ullamco labor nisi aliquip ex ea commodo consequat duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
-                            <p class="mb-0"><a class="" href="#">PestKit </a> &copy; 2023 All Right Reserved.</p>
+                            <h4 class="text-white fw-bold mb-4">About brisk</h4>
+                            <p>Brisk Pest Management Service  - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way.
+Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
+                            <p class="mb-0"><a class="" href="#">brisk </a> &copy; 2023 All Right Reserved.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Usefull Link</h4>
                             <div class="d-flex flex-column align-items-start">
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>About Us</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Contact Us</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Our Services</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Terms & Condition</a>
+                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/about.html"><i class="fa fa-check me-2"></i>About Us</a>
+                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/contact.html"><i class="fa fa-check me-2"></i>Contact Us</a>
+                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/service.html"><i class="fa fa-check me-2"></i>Our Services</a>
+                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/project.html"><i class="fa fa-check me-2"></i>Licence</a>
                             </div>
                         </div>
                     </div>
@@ -175,10 +169,16 @@
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Services Link</h4>
                             <div class="d-flex flex-column align-items-start">
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Apartment Cleaning</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Office Cleaning</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Car Washing</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Green Cleaning</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Rodent Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Mosquito Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Bed Bug Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>WASP control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Ants Treatment</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Cockroach Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Fly Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Honey Bee Removal</a>
+
+
                             </div>
                             
                         </div>
@@ -186,9 +186,9 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Contact Us</h4>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 pb-3 border-bottom rounded-0"><i class="fa fa-map-marker-alt me-3"></i>123 Street, CA, USA</a>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</a>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-envelope me-3"></i>info@example.com</a>
+                            <a href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>VIEW MAP</a>
+                            <a href="tel:+919900102056" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>CALL US</a>
+                            <a href="mailto:info.briskpestmanagement@gmail.com" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>MAIL US</a>
                         </div>
                     </div>
                 </div>
@@ -203,19 +203,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                        <a href="#" class="text-primary mb-0 display-6">Pest<span class="text-white">Kit</span><i class="fa fa-spider text-primary ms-2"></i></a>
+                        <h1 class="text-primary mb-0 display-5" style="font-size: 1rem; @media (max-width: 584px) { font-size: 1.5rem; }">BRISK<span class="text-white">GROUP OF COMPANIES</span><i class=""></i></h1>
                     </div>
                     <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
-                        <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-4"><i class="fab fa-facebook-f text-dark"></i></a>
+                        <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-4"><i class="fab fa-instagram text-dark"></i></a>
+                        <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-dark"></i></a>
                     </div>
                     <div class="col-md-4 my-auto text-center text-md-end text-white">
-                        <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                        <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                        <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                        Designed By <a class="border-bottom" href="https://instagram.com/sunaif_adkar">sunaif adkar</a>
                     </div>
                 </div>
             </div>
