--- a/service.html
+++ b/service.html
@@ -2,11 +2,14 @@
 <html lang="en">
 
     <head>
-        <meta charset="utf-8">
-        <title>Brisk Pest Manegement </title>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="" name="keywords">
-        <meta content="" name="description">
+    <meta charset="utf-8">
+    <title>Brisk Pest Management</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+    <link rel="icon" href="img/brisklogo.png" type="image/png">
+</head>
+
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,6 +27,19 @@
 
         <!-- Customized Bootstrap Stylesheet -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
+        
+        <!-- Your Logo Stylesheet -->
+    <style>
+        .logo-container {
+            background-image: url('img/brisklogo.png'); /* Update the path to your actual logo */
+            background-size: cover;
+            width: 200px; /* Set a width for your logo container */
+            height: 100px; /* Set a height for your logo container */
+        }
+    </style>
+</head>
+
+<body>
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
@@ -41,9 +57,9 @@
             <div class="container">
                 <div class="d-flex justify-content-between topbar py-2">
                     <div class="d-flex align-items-center flex-shrink-0 topbar-info">
-                        <a href="#" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>India</a>
-                        <a href="#" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>+919900102056</a>
-                        <a href="#" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>sunaif@gmail.com</a>
+                        <a href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>VIEW MAP</a>
+                        <a href="tel:+919900102056" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>CALL US</a>
+                        <a href="mailto:info.briskpestmanagement@gmail.com" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>MAIL US</a>
                     </div>
                     <div class="text-end pe-4 me-4 border-end border-dark search-btn">
                         <div class="search-form">
@@ -58,10 +74,9 @@
                         </div>
                     </div>
                     <div class="d-flex align-items-center justify-content-center topbar-icon">
-                        <a href="#" class="me-4"><i class="fab fa-facebook-f text-dark"></i></a>
-                        <a href="#" class="me-4"><i class="fab fa-twitter text-dark"></i></a>
-                        <a href="#" class="me-4"><i class="fab fa-instagram text-dark"></i></a>
-                        <a href="#" class=""><i class="fab fa-linkedin-in text-dark"></i></a>
+                        <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-4"><i class="fab fa-facebook-f text-dark"></i></a>
+                        <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-4"><i class="fab fa-instagram text-dark"></i></a>
+                        <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-dark"></i></a>
                     </div>
                 </div>
             </div>
@@ -74,7 +89,7 @@
             <div class="container">
                 <nav class="navbar navbar-dark navbar-expand-lg py-lg-0">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="text-primary mb-0 display-5">brisk<span class="text-white">group of companies</span><i class=""></i></h1>
+                        <h1 class="text-primary mb-0 display-5" style="font-size: 1rem; @media (max-width: 584px) { font-size: 1.5rem; }">BRISK<span class="text-white">GROUP OF COMPANIES</span><i class=""></i></h1>
                     </a>
                     <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-dark"></span>
@@ -83,17 +98,8 @@
                         <div class="navbar-nav ms-auto">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
+                            <a href="project.html" class="nav-item nav-link">Licence</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
-                            <a href="project.html" class="nav-item nav-link">Projects</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                                <div class="dropdown-menu m-0 bg-primary">
-                                    <a href="price.html" class="dropdown-item">Pricing Plan</a>
-                                    <a href="blog.html" class="dropdown-item">Blog Post</a>
-                                    <a href="team.html" class="dropdown-item">Team Members</a>
-                                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                </div>
-                            </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
@@ -206,7 +212,7 @@
                 <div class="project-item">
                     <div class="project-left bg-dark"></div>
                     <div class="project-right bg-dark"></div>
-                    <img src="img/project-7.jpg" class="img-fluid h-100" alt="img">
+                    <img src="img/project-2.jpg" class="img-fluid h-100" alt="img">
                     <div class="project-details">
                         <a href="" class="fs-4 fw-bold text-center">Cockroach Control</a>
                         <p class="fs-6 text-center">Fast, eco Cockroach Control for a pest-free space!</p>
@@ -219,7 +225,7 @@
                 <div class="project-item">
                     <div class="project-left bg-dark"></div>
                     <div class="project-right bg-dark"></div>
-                    <img src="img/project-8.jpg" class="img-fluid h-100" alt="img">
+                    <img src="img/project-4.jpg" class="img-fluid h-100" alt="img">
                     <div class="project-details">
                         <a href="" class="fs-4 fw-bold text-center">Honey Bee Removal</a>
                         <p class="fs-6 text-center">Gentle, eco Bee Removal for a sting-free zone!.</p>
@@ -274,67 +280,7 @@
     </div>
 </div>
 <!-- Blog End -->
-
-
-        <!-- Testimonial Start -->
-<div class="container-fluid testimonial py-5">
-    <div class="container py-5">
-        <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-            <h1 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Features</h1>
-        </div>
-        <h2 class="display-5 w-50 mx-auto">Why Choose Us</h2>
-        <p>Our specialist Entomologists deliver inspections and audits on a regular basis to provide you with an appropriate standard quality management system. Our documented processes aim to reduce risk in your business.</p>
-    </div>
-</div>
-
-<div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay=".5s">
-    <div class="testimonial-item">
-        <div class="testimonial-content rounded mb-4 p-4">
-            <p class="fs-5 m-0">Welcome to BRISK PEST SERVICE, where your peace of mind is our top priority. Our dedicated team of experts is committed to providing superior pest control solutions tailored to your needs. With our comprehensive services, cutting-edge techniques, and eco-friendly practices, we guarantee 100% satisfaction in safeguarding your home or business from pests. Trust us for a pest-free environment, backed by our unwavering commitment to your complete satisfaction</p>
-        </div>
-        <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
-            <div class="position-relative">
-                <img src="img/testimonial-1.jpg" class="img-fluid rounded-circle py-2" alt="">
-                <div class="position-absolute" style="top: 33px; left: -25px;"></div>
-            </div>
-            <div class="ms-3">
-                <h4 class="mb-0">100% Satisfaction Guarantee</h4>
-            </div>
-        </div>
-    </div>
-
-    <div class="testimonial-item">
-        <div class="testimonial-content rounded mb-4 p-4">
-            <p class="fs-5 m-0">Brisk Pest Management: Your premier solution for top-tier, eco-friendly pest control. Our experts ensure an impeccably pest-free environment, offering 24/7 Emergency Services for your peace of mind. Experience excellence with Brisk Pest Management – where expertise meets dedication.</p>
-        </div>
-        <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
-            <div class="position-relative">
-                <img src="img/testimonial-2.jpg" class="img-fluid rounded-circle py-2" alt="">
-                <div class="position-absolute" style="top: 33px; left: -25px;"></div>
-            </div>
-            <div class="ms-3">
-                <h4 class="mb-0">24/7 Emergency Service</h4>
-            </div>
-        </div>
-    </div>
-
-    <div class="testimonial-item">
-        <div class="testimonial-content rounded mb-4 p-4">
-            <p class="fs-5 m-0">Brisk Pest Management: Your top-tier solution for eco-friendly pest control. Our experts ensure an impeccably pest-free environment, featuring Straight Forward Pricing for your peace of mind. Experience excellence with Brisk Pest Management – where expertise meets dedication.</p>
-        </div>
-        <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
-            <div class="position-relative">
-                <img src="img/testimonial-3.jpg" class="img-fluid rounded-circle py-2" alt="">
-                <div class="position-absolute" style="top: 33px; left: -25px;"></div>
-            </div>
-            <div class="ms-3">
-                <h4 class="mb-0">Straight Forward Pricing</h4>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Testimonial End -->
-
+            
         <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
             <div class="container py-5">
@@ -351,10 +297,10 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Usefull Link</h4>
                             <div class="d-flex flex-column align-items-start">
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>About Us</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Contact Us</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Our Services</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Terms & Condition</a>
+                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/about.html"><i class="fa fa-check me-2"></i>About Us</a>
+                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/contact.html"><i class="fa fa-check me-2"></i>Contact Us</a>
+                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/service.html"><i class="fa fa-check me-2"></i>Our Services</a>
+                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/project.html"><i class="fa fa-check me-2"></i>Licence</a>
                             </div>
                         </div>
                     </div>
@@ -379,9 +325,9 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Contact Us</h4>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 pb-3 border-bottom rounded-0"><i class="fa fa-map-marker-alt me-3"></i>banglore, india</a>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-phone-alt me-3"></i>++919900102056</a>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-envelope me-3"></i>sunaif@gmail.com</a>
+                            <a href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>VIEW MAP</a>
+                            <a href="tel:+919900102056" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>CALL US</a>
+                            <a href="mailto:info.briskpestmanagement@gmail.com" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>MAIL US</a>
                         </div>
                     </div>
                 </div>
@@ -396,18 +342,14 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                        <a href="#" class="text-primary mb-0 display-6">Brisk<span class="text-white">group of companies</span><i class=""></i></a>
+                        <h1 class="text-primary mb-0 display-5" style="font-size: 1rem; @media (max-width: 584px) { font-size: 1.5rem; }">BRISK<span class="text-white">GROUP OF COMPANIES</span><i class=""></i></h1>
                     </div>
                     <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
-                        <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-4"><i class="fab fa-facebook-f text-dark"></i></a>
+                        <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-4"><i class="fab fa-instagram text-dark"></i></a>
+                        <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-dark"></i></a>
                     </div>
                     <div class="col-md-4 my-auto text-center text-md-end text-white">
-                        <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                        <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                        <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
                         Designed By <a class="border-bottom" href="https://instagram.com/sunaif_adkar">sunaif adkar</a>
                     </div>
                 </div>
